--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -221,6 +221,7 @@
 
   .result-left {
     display: flex;
+    padding: 6px;
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
@@ -246,6 +247,7 @@
 
   .result-right {
     display: flex;
+    padding: 6px;
     flex-direction: column;
     align-items: center;
     gap: 8px;
