--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -221,7 +221,7 @@
 
   .result-left {
     display: flex;
-    padding: 6px;
+    padding: 0px 6px 0px 6px; /* top, right, bottom, left */
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
@@ -247,7 +247,7 @@
 
   .result-right {
     display: flex;
-    padding: 6px;
+    padding: 0px 6px 0px 6px;
     flex-direction: column;
     align-items: center;
     gap: 8px;
