--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1790,6 +1790,8 @@ if (hasBook) {
     'TreasureHunters': '/assets/TreasureHuntersIcon.webp',
     'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
     'FasnachtRewards': '/assets/FasnachtIcon.svg',
+    'InvadersRewards': '/assets/InvadersIcon.webp',
+    'HolidayScorched': '/assets/HolidayScorchedIcon.webp',
     'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
     'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
     'PublicEventRewards': '/assets/PublicEventIcon.svg',
