--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1217,19 +1217,23 @@ const IconAltText_BOOK = {
     TreasureHunters: { alt: "Treasure Hunters Event Reward" },
     MeatWeekRewards: { alt: "Meat Week Seasonal Event Reward" },
     FasnachtRewards: { alt: "Fasnacht Seasonal Event Reward" },
+    InvadersRewards: { alt: "Invaders from Beyond Seasonal Event Reward"},
+    HolidayScorched: { alt: "Holiday Scorched Seasonal Event Reward"},
+    BigBloomRewards: { alt: "Big Bloom Seasonal Event Reward"},
     MischiefNightRewards: { alt: "Mischief Night Seasonal Event Reward" },
     SpookyScorched: { alt: "Spooky Scorched Seasonal Event Reward" },
     PublicEventRewards: { alt: "Public Event Reward" },
     EquinoxRewards: { alt: "Mothman Equinox Seasonal Event Reward" },
     GrahmVendor: { alt: "Sold by Grahm" },
     UnusedContent: { alt: "Unused Content"},
+    ScorchedEarthRewards: { alt: "Reward from Event: Scorched Earth"},
     ColossalProblemRewards: { alt: "Reward from Event: A Colossal Problem" },
     BeastsOfBurdenRewards: { alt: "Reward from Event: Beasts of Burden" },
     CampfireTalesRewards: { alt: "Reward from Event: Campfire Tales" },
     DangerousPastimesRewards: { alt: "Reward from Event: Dangerous Pastimes" },
     MoonshineJamboreeRewards: { alt: "Reward from Event: Moonshine Jamboree" },
     MostWantedRewards: { alt: "Reward from Event: Most Wanted" },
-    NWOTGenericRewards: { alt: "Reward from Event: Most Wanted, Spin the Wheel, Tunnel of Love" },
+    NWOTGenericRewards: { alt: "Reward from Event: Most Wanted, Event: Spin the Wheel, Event: Tunnel of Love" },
     NeurologicalWarfareRewards: { alt: "Reward from Event: Neurological Warfare" },
     RadiationRumbleRewards: { alt: "Reward from Event: Radiation Rumble" },
     SafeAndSoundRewards: { alt: "Reward from Event: Safe and Sound" },
@@ -1280,6 +1284,10 @@ const IconAltText_ENTM = {
   // manual EDID prefix mappings
   BABYLON_: "Nuclear Winter Reward",
   SHELTERS_: "Atomic Shop Item",
+  DE2024_Halloween: "Trick or Treat Challenges Event Reward (2024)",
+  DE2024_ScienceOfLove: "Science of Love Challenges Event Reward (2024)",
+  DE2024_ScoutsUncharted: "Scouts Uncharted Challenges Event Reward (2024)",
+
 
   // fallbacks
   ATX: "Atomic Shop Item",
@@ -1291,6 +1299,9 @@ const IconAltText_ENTM = {
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.webp',
   'Shelters_': '/assets/AtomIcon.webp',
+  'DE2024_Halloween': '/assets/ChallengeIcon.svg',
+  'DE2024_ScoutsUncharted': '/assets/ChallengeIcon.svg',
+  'DE2024_ScienceOfLove': '/assets/ChallengeIcon.svg',
 };
 const miniSeasonAliases = {
   'SCORE_MiniSeason_2025_MMMFE': 'Marshal Mallow'
@@ -1792,6 +1803,7 @@ if (hasBook) {
     'FasnachtRewards': '/assets/FasnachtIcon.svg',
     'InvadersRewards': '/assets/InvadersIcon.webp',
     'HolidayScorched': '/assets/HolidayScorchedIcon.webp',
+    'BigBloomRewards': '/assets/BigBloomIcon.webp',
     'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
     'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
     'PublicEventRewards': '/assets/PublicEventIcon.svg',
