--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -288,6 +288,7 @@
 
   .connector {
     color: var(--accent);
+    display: block;
     font-weight: 600;
     font-size: 13px;
     margin: 0 6px;
