--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -288,7 +288,6 @@
 
   .connector {
     color: var(--accent);
-    display: block;
     font-weight: 600;
     font-size: 13px;
     margin: 0 6px;
@@ -2020,6 +2019,7 @@ bookFulls.forEach((fullName, i) => {
     const conn = document.createElement('span');
     conn.className = 'connector';
     conn.textContent = bookBookConnector;
+    condWrap.appendChild(document.createElement('br')); // new line
     condWrap.appendChild(conn);
   }
 });
@@ -2030,6 +2030,7 @@ bookFulls.forEach((fullName, i) => {
     const conn = document.createElement('span');
     conn.className = 'connector';
     conn.textContent = bookEntmConnector;
+    condWrap.appendChild(document.createElement('br')); // new line
     condWrap.appendChild(conn);
   }
 
@@ -2197,6 +2198,7 @@ if (hasEntm) {
       const conn = document.createElement('span');
       conn.className = 'connector';
       conn.textContent = entmEntmConnector;
+      condWrap.appendChild(document.createElement('br')); // new line
       condWrap.appendChild(conn);
     }
   });
