--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -466,7 +466,7 @@
 
   /* Modal background */
   .modal {
-    display: none; /* hidden by default */
+    display: none;
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -474,26 +474,51 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(26,26,26, 0.5); 
   }
-  
+
   /* Modal content box */
   .modal-content {
-    background-color: #fff;
-    margin: 10% auto; /* center vertically */
+    background-color: var(--card-bg);
+    margin: 10% auto;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 12px;
     width: 400px;
     position: relative;
+    color: var(--text);
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    font-family: sans-serif;
   }
-  
+
   /* Close button */
   .close {
     position: absolute;
     top: 10px;
     right: 15px;
     font-size: 24px;
+    font-weight: bold;
     cursor: pointer;
+    color: var(--accent);
+  }
+
+  .close:hover {
+    color: var(--accent-dim);
+  }
+
+  /* Accent button style */
+    .accent-btn {
+    background-color: var(--card-bg);      /* dark background */
+    color: var(--accent);                   /* yellow text */
+    border: 2px solid var(--accent);       /* 2px accent border */
+    padding: 6px 20px;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+    display: block;                         /* allow centering */
+    margin: 10px auto;                      /* center horizontally */
+    font-size: 14px;
+    text-align: center;
+    transition: background-color 0.2s, color 0.2s;
   }
 
   #filtersButton,
@@ -927,7 +952,7 @@
   </div>
 
 
-<button id="infoBtn">Info & FAQ</button>
+<button id="infoBtn" class="accent-btn">Info & FAQ</button>
 <!-- Modal Window -->
 <div id="infoModal" class="modal">
   <div class="modal-content">
