--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1501,8 +1501,9 @@ const faqItems = [
     a: "This simply means it's not covered by any particular category I have defined so far. Plans are obtained in a very wide selection of ways, and documenting all plan sources is a whole task in and of itself, especially in an automated manner. I may expand this in the future, but for now, as of V3.0, I tried to have the categories be as broad as possible while also keeping the time investment on my part relatively reasonable." 
   },
     {
-    q: "What are the different budget cost tiers, and what is a Flamingo Unit?"
-    a: ["Like the name implies, a Flamingo Unit is the budget cost of a lawn flamingo decor item. The vast majority of C.A.M.P. items costs 1 Flamingo Unit. This unit of measurement is used because budget limits vary between C.A.M.P.s, Shelters, and Workshops, so percentages aren't always the same. A C.A.M.P. has a max budget of 500 FUs. Most Shelters have a max budget of 700 FUs, and some have a max budget of 1500 FUs. Workshops have a max budget of 1500 FUs.",
+    q: "What are the different budget cost tiers, and what is a Flamingo Unit?",
+    a: [
+        "Like the name implies, a Flamingo Unit is the budget cost of a lawn flamingo decor item. The vast majority of C.A.M.P. items costs 1 Flamingo Unit. This unit of measurement is used because budget limits vary between C.A.M.P.s, Shelters, and Workshops, so percentages aren't always the same. A C.A.M.P. has a max budget of 500 FUs. Most Shelters have a max budget of 700 FUs, and some have a max budget of 1500 FUs. Workshops have a max budget of 1500 FUs.",
         "The different budget tiers are chosen in an arbitrary manner. Each tier threshold is double of the previous threshold."
     ],
     icons: [
