Create new icons, update index.html

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -926,7 +926,7 @@
       Made by <span class="author-name">MrsBlobby</span>
       <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other Tools</a>
     </p>
-    <p class="updated">Last Updated: November 15, 2025</p>
+    <p class="updated">Last Updated: December 27, 2025</p>
   </div>
 </div>
 
@@ -934,6 +934,23 @@
 <div class="container">
     <details>
       <summary>Version History</summary>
+      <div class="changelog-entry">
+          <h4>v3.0</h4>
+          <ul>
+              <li>
+                  <div>
+                      Added CAMP budget cost to items. Massive thank you to Eckserah for helping out with the script side of this.<br>
+                      Added support for items unlocked by challenges<br>
+                      Added support for items that have "loot to unlock" placement conditions<br>
+                      Fixed various items and/or placement conditions being missing<br>
+                      Added more placement condition icons<br>
+                      Added "sort by budget"<br>
+                      Various UI fixes<br>
+                      Added Info & FAQ section
+                  </div>
+              </li>
+          </ul>
+      </div>
        <div class="changelog-entry">
           <h4>v3.0 Beta</h4>
           <ul>
@@ -1239,7 +1256,7 @@ const CategoryIcons = {
   'Retail': '/assets/SubCategory-RetailIcon.webp',
   'Rustic': '/assets/SubCategory-RusticIcon.webp',
   'Scavenger': '/assets/SubCategory-ScavengerIcon.webp',
-  'Allies': '/assets/SubCategory-AlliesIcon.svg',
+  'Allies': '/assets/SubCategory-AlliesIcon.webp',
   'Pets': '/assets/SubCategory-PetsIcon.webp',
   'Pet Furniture': '/assets/SubCategory-PetFurnitureIcon.webp'
 };
